[tool.poetry]
name = "langchain-wechat"
version = "0.1.0"
description = ""
authors = ["Pony.Ma <mtf201013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pyqrcode = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
